--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <p>Bonjour à tous</p>
     <p>Oui Oui</p>
+    <p>Non non non</p>
     <script src="assets/script.js"></script>
 </body>
 </html>
